put, post copies fixed
