# src/routes/consoles.js
@@ -1,14 +1,17 @@
 const express = require("express");
 const router = express.Router();
 const consoles = require("../controllers/consolesController");
+const { auth, requiresAuth } = require('express-openid-connect');
 
 // Get all consoles
-router.get("/", consoles.getAllConsoles);
+router.get("/", requiresAuth(), consoles.getAllConsoles);
+// Update a console
+router.put("/", requiresAuth(), consoles.addOrUpdateConsole);
 // Get a console by ID
-router.get("/:id", consoles.getConsole);
+router.get("/:id", requiresAuth(), consoles.getConsole);
 // Add or update a console
-router.post("/", consoles.addOrUpdateConsole);
+router.post("/", requiresAuth(), consoles.addOrUpdateConsole);
 // Delete a console by ID
-router.delete("/:id", consoles.deleteConsole);
+router.delete("/:id", requiresAuth(), consoles.deleteConsole);
 
 module.exports = router;
